Fix image and video alignment in hover effects

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -138,13 +138,16 @@ h2 {
 .one {
   width: 160px;
   height: 160px;
-  position: relative;
+  /* position: relative; */
+  position: absolute;
 }
 
 .two {
   width: 160px;
   height: 160px;
   position: absolute;
+  top: 0;
+  left: 0;
   transition: opacity .2s ease-in-out;
   -moz-transition: opacity .2s ease-in-out;
   -webkit-transition: opacity .2s ease-in-out;
